force-app/main/default/objects/workFlow__c/workFlow__c.object-meta.xml
<CustomObject>
    <label>workFlow</label>
    <nameField>
        <label>workFlow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkFlows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>