force-app/main/default/objects/workFlow__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>FileName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>