force-app/main/default/objects/workFlow__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>FileType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>