force-app/main/default/objects/workFlow__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>Email</type>
</CustomField>